// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Weather should render correctly with data 1`] = `
<styled.div>
  <styled.h2>
     Today in: 
    London
    , 
    UK
  </styled.h2>
  <Icon
    description="sunny"
  />
  <styled.p>
     We have 
    sunny
    , with 
    10
    % clouds
  </styled.p>
  <styled.p>
    The temperature is: 
    22.85
    °C, with minimum of 
    20
    °C and a maximum of 
    22.85
    °C
  </styled.p>
  <styled.p>
     The wind is blowing with: 
    4.1
    m/s and we have a humidity of: 
    10
    %
  </styled.p>
  <styled.button
    data-name="fahrenheitButton"
    onClick={[Function]}
  >
    Change °F
  </styled.button>
  <styled.button
    data-name="celsiuseButton"
    onClick={[Function]}
  >
    Change °C
  </styled.button>
</styled.div>
`;

exports[`Weather should render correctly without data 1`] = `
<styled.div>
  <styled.h2>
     Today in: 
    , 
  </styled.h2>
  <Icon
    description=""
  />
  <styled.p>
     We have 
    , with 
    0
    % clouds
  </styled.p>
  <styled.p>
    The temperature is: 
    0
    °C, with minimum of 
    0
    °C and a maximum of 
    0
    °C
  </styled.p>
  <styled.p>
     The wind is blowing with: 
    0
    m/s and we have a humidity of: 
    0
    %
  </styled.p>
  <styled.button
    data-name="fahrenheitButton"
    onClick={[Function]}
  >
    Change °F
  </styled.button>
  <styled.button
    data-name="celsiuseButton"
    onClick={[Function]}
  >
    Change °C
  </styled.button>
</styled.div>
`;

exports[`celsiuseButton should change the temperature from Fahrenheit to Celsiuse 1`] = `
<styled.div>
  <styled.h2>
     Today in: 
    London
    , 
    UK
  </styled.h2>
  <Icon
    description="sunny"
  />
  <styled.p>
     We have 
    sunny
    , with 
    10
    % clouds
  </styled.p>
  <styled.p>
    The temperature is: 
    23
    °C, with minimum of 
    20
    °C and a maximum of 
    23
    °C
  </styled.p>
  <styled.p>
     The wind is blowing with: 
    4.1
    m/s and we have a humidity of: 
    10
    %
  </styled.p>
  <styled.button
    data-name="fahrenheitButton"
    onClick={[Function]}
  >
    Change °F
  </styled.button>
  <styled.button
    data-name="celsiuseButton"
    onClick={[Function]}
  >
    Change °C
  </styled.button>
</styled.div>
`;

exports[`fahrenheitButton should change the temperature from Celsiuse to Fahrenhite 1`] = `
<styled.div>
  <styled.h2>
     Today in: 
    London
    , 
    UK
  </styled.h2>
  <Icon
    description="sunny"
  />
  <styled.p>
     We have 
    sunny
    , with 
    10
    % clouds
  </styled.p>
  <styled.p>
     The temperature is: 
    73.4
    °F, with minimum of 
    68
    °F and a maximum of 
    73.4
    °F
  </styled.p>
  <styled.p>
     The wind is blowing with: 
    4.1
    m/s and we have a humidity of: 
    10
    %
  </styled.p>
  <styled.button
    data-name="fahrenheitButton"
    onClick={[Function]}
  >
    Change °F
  </styled.button>
  <styled.button
    data-name="celsiuseButton"
    onClick={[Function]}
  >
    Change °C
  </styled.button>
</styled.div>
`;
